--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
    --blue:#B4F2E1;
    --girls:'Crafty Girls', cursive;
    --frederica:'Fredericka the Great', cursive;
+   --pomodoro:#A084CF;
+   --shortBreak: #54BAB9;
+   --longBreak: #FF85B3
 }
 
 body{
@@ -42,7 +45,17 @@ ul>.menu{
    background: #ffb4b4;
    border: 2px dotted var(--blue);
    margin: 5px;
+   cursor:pointer;
 }
+
+.menu.ative{
+   border-color:var(--yellow) ;
+}
+
+.menu:hover{
+   background-color: var(--blue);
+}
+
 
 .time{
    text-align: center;
@@ -56,6 +69,7 @@ ul>.menu{
    flex-direction: column;
 }
 
+
 .time>.counter{
    font-size: 5rem;
    font-family: var(--frederica);
@@ -63,20 +77,28 @@ ul>.menu{
    height: 80%;
    align-items: center;
    text-align: center;
- 
+
 }
 
-.stop-btn{
-   font-size: 1.8rem;
+.btn{
+   
    align-items: flex-end;
-   margin: 10px;
    height: 5%;
-   background-color:#ffb4b4 ;
-   border-radius: 10px;
+   margin: 25px;
+   
+}
+
+.btn>span{
+   flex-direction: column;
+   margin: 25px;
+   padding:2px;
    color:var(--pink);
+   background-color:#ffb4b4 ;
+   font-size: 1.5rem;
+   border-radius: 10px;
+   
    font-family: var(--girls);
    border: 2px dotted var(--blue);
-   
 }
 
 @media screen and (max-width:800px) {
