--- a/todo.css
+++ b/todo.css
@@ -16,20 +16,22 @@ section.to-do{
    
    font-family:var(--girls);
    max-width: 60%;
-   
+   margin:0 auto;
+   margin-top: 2rem
 }
 
-.list>li{
+
+ul li{
    cursor: pointer;
    position:relative;
    padding: 5px 3px 12px 20px;
-   font-size: 1rem;
-   list-style-type: none;
+   font-size: 0.8rem;
+   transition:0.2s;
    border: 1px dashed var(--blue);
    border-radius: 5px;
+   list-style-type: none;
 
    
-   transition:0.2s;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
@@ -39,34 +41,61 @@ section.to-do{
 ul li.checked{
    background-color: var(--yellow);
    color:var(--pink);
-   font-family: var(--girls);
    text-decoration: line-through;
+   
+   
 }
 
-.checked:before{
+li{
+   margin: 
+}
+ul li.checked:before{
    content:'';
    position:absolute;
-   border-color: var(--pink);border-style: solid;
+   border-color: var(--pink);
+   border-style: solid;
    border-width: 0 2px 2px 0;
-   top: 10px;
-   left: 16px;
-   transform: ritate(45deg);
+   top: 9px;
+   left: 3px;
+   transform: rotate(45deg);
    height: 15px;
    width:7px;
    font-family: var(girls);
    font-weight: bold;
+   margin-left: 5px;
+   
+   
 }
 .close{
    position: absolute;
-   right: 0;
-   top:0;
+   right: -3px;
+   top:-3px;
    color: var(--pink);
    padding: 12px 16px;
    
    
 }
 
+
 .close:hover{
    
    color:var(--yellow)
 }
+
+.input{
+   display:flex;
+   flex-direction: row;
+   justify-content: space-between;
+   margin-bottom: 20px;
+}
+.btn-add{ 
+   padding:1px;
+   color:var(--pink);
+   background-color:#ffb4b4 ;
+   font-size: 1rem;
+   border-radius: 5px;
+   
+   font-family: var(--girls);
+   border: 2px dotted var(--blue);
+}
+
